2007-10-23  Goedson Teixeira Paixao  <goedson@debian.org>

	* Makefile.am: Removed debian from SUBDIRS

2007-10-20  Goedson Teixeira Paixao  <goedson@debian.org>

	* configure.in: Added libgkhtml up to 3.14 to the supported
	versions of ligtkhtml API

2007-10-17  Goedson Teixeira Paixao  <goedson@debian.org>

	* configure.in, po/no.po, po/nb.po: Renamed no.po to nb.po
	  (Fixes: #1815003).

2007-10-13  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/status-icon.c: Clicking on status icon will toggle the timer.

2007-10-12  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/app.c (app_new): create the status icon.
	(app_quit): destroy the status icon.

	* src/Makefile.am: Added status-icon.c and status-icon.h to the
	build process.

	* src/ctree.c (start_timer_for_row, stop_timer_for_row): Update
	the timer status indication in the status icon.

	* src/status-icon.c, src/status-icon.h: Initial implementation of
	a status icon.

2007-10-08  Goedson Teixeira Paixao  <goedson@debian.org>

	* glade/interval_edit.glade: show seconds in the interval edit
	dialog (Fixes: #1706365)

	* src/ghtml-deprecated.c: Ported to guile-1.8.

	* src/ghtml.c: Ported to guile-1.8.

	* ghtml/C/basic-invoice.ghtml: Fixed some unquoted strings.

	* ghtml/C/primer.ghtml: Fixed some unquoted strings.

2007-09-26  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/toolbar.c: rebuild the toolbar each time config_show_toolbar
	is changed so that the toolbar is really hidden when the don't
	want it to be shown.

	* gnotime.desktop: Updated desktop entry

	* configure.in: Removed debian/Makefile from the list of output
	files.

2007-09-24  Goedson Teixeira Paixao  <goedson@debian.org>

	* configure.in: Removed Makefiles for the manual translations from
	the list of output files.

2007-09-23  Goedson Teixeira Paixao  <goedson@debian.org>

	* Released 2.2.3
	
	* NEWS: Added release notes for version 2.2.3

	* doc/C/gnotime.xml: Removed notes about the manual being outdated