@@ -1,3 +1,8 @@
+2007-11-14  Goedson Teixeira Paixao  <goedson@debian.org>
+
+	* scripts/Makefile.am (dist_bin_SCRIPTS): Added list of
+	scripts to be installed.
+
 2007-10-23  Goedson Teixeira Paixao  <goedson@debian.org>
 
 	* Makefile.am: Removed debian from SUBDIRS
